--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <h3>Welcome</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi in itaque ea vitae eligendi? Deserunt nihil voluptates sequi corporis, exercitationem quidem non earum sapiente eligendi deleniti doloribus commodi aut eum.</p>
     
 </body>
 </html>
